# s3tk

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
s3tk/: __init__.py  checks.py
tests/: test_s3tk.py
